# fxgui

./: .auto-changelog  .gitignore  .gitmodules  .tmp.py  404.html  CHANGELOG.md  CLAUDE.md  LICENSE  MANIFEST.in  README.md  actions.py  example.py  fxgui.code-workspace  houdini_package.json  index.html  mkdocs.yml  objects.inv  package.json  pyproject.toml  requirements.mkdocs.txt  requirements.txt  requirements.zensical.txt  setup.py  shadows.py  splashscreen.py  style.py  tree_widget  versions.json  window.py  zensical.toml.bak
.claude/: settings.local.json
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: FUNDING.yml  docs.yml  python-publish.yml  release.yml
.scripts/: capture_widget_screenshots.py
.scripts/docs/: capture_widget_screenshots.py
.scripts/git/: IncrementVersion.ps1  Update-GitTag.ps1
11.1.0/changelog/: index.html
11.1.0/technical/: index.html
11.1.1/changelog/: index.html
11.1.1/search/: search_index.json
11.1.1/technical/: index.html
11.1.2/changelog/: index.html
11.1.2/search/: search_index.json
11.1.2/technical/: index.html
11.1.3/: objects.inv
11.1.3/search/: search_index.json
11.1.3/technical/: index.html
11.2.0/: index.html
11.2.0/changelog/: index.html
11.2.0/search/: search_index.json
11.2.0/technical/: index.html
11.3.0/: objects.inv
11.3.0/changelog/: index.html
11.3.0/technical/: index.html
11.4.0/changelog/: index.html
11.4.0/installation/: index.html
11.4.0/search/: search_index.json
11.4.0/technical/: index.html
11.4.1/: 404.html  objects.inv
11.4.1/search/: search_index.json
11.4.1/technical/: index.html
11.4.2/: 404.html
11.4.2/changelog/: index.html
11.4.2/how-to/: index.html
11.4.2/search/: search_index.json
11.4.2/technical/: index.html
11.5.0/: objects.inv
11.5.0/changelog/: index.html
11.5.0/installation/: index.html
11.5.0/technical/: index.html
11.5.2/: index.html  objects.inv
11.5.2/changelog/: index.html
11.5.2/how-to/: index.html
11.5.2/search/: search_index.json
11.5.2/technical/: index.html
11.6.0/: objects.inv
11.6.0/changelog/: index.html
11.6.0/installation/: index.html
11.6.0/search/: search_index.json
11.6.0/technical/: index.html
11.7.0/: 404.html  index.html
11.7.0/how-to/: index.html
11.7.0/search/: search_index.json
11.7.0/technical/: index.html
actions/: index.html
application/: index.html
dcc/: index.html
dev/search/: search_index.json
dev/technical/: index.html
docs/: actions.md  application.md  dcc.md  examples.md  fxconfig.md  fxconstants.md  fxcore.md  fxicons.md  how_to.md  how_to_styling.md  how_to_theming.md  how_to_widgets.md  icons.md  index.md  installation.md  shadows.md  splashscreen.md  style.md  tree_widget.md  utils.md  widgets.md  window.md
docs/.scripts/: generate_technical_docs.py
docs/how-to/: icons.md  index.md  styling.md  theming.md  widgets.md
docs/images/: pyside2_vfx_template_logo.ai
docs/stylesheets/: extra.css
docs/technical/: fxdcc.md  fxstyle.md  fxutils.md  fxwidgets.md
examples/: index.html
fxconfig/: index.html
fxconstants/: index.html
fxcore/: index.html
fxdcc/: index.html
fxgui/: __init__.py  _fxwidgets.py  dcc.py  examples.py  fxconfig.py  fxconstants.py  fxcore.py  fxdcc.py  fxicons.py  fxstyle.py  fxutils.py  fxwidgets.py  icons.py  style.jsonc  style.py  style.qss  style.yaml  utils.py  widgets.py
fxgui/_deprecated/: actions.py  application.py  example.py  floating_dialog.py  splashscreen.py  tree_widget.py  window.py
fxgui/fxwidgets/: __init__.py  _accordion.py  _application.py  _breadcrumb.py  _button_group.py  _code_block.py  _collapsible.py  _color_picker.py  _constants.py  _delegates.py  _dialogs.py  _drop_zone.py  _examples.py  _file_path_widget.py  _fuzzy_search_list.py  _fuzzy_search_tree.py  _inputs.py  (+21 more)
fxicons/: index.html
fxstyle/: index.html
fxutils/: index.html
fxwidgets/: index.html
how_to/: index.html
how_to_icons/: index.html
how_to_styling/: index.html
how_to_theming/: index.html
how_to_widgets/: index.html
icons/: index.html
images/: pyside2_vfx_template_logo.ai
installation/: index.html
pyside2_vfx_template/: actions.py  application.py  dcc.py  example.py  floating_dialog.py  get_parent_dcc.py  icons.py  shadows.py  splashscreen.py  style.jsonc  style.py  tree_widget.py  utils.py  window.py
qss/: style.qss
search/: search_index.json
shadows/: index.html
splashscreen/: index.html
style/: index.html
stylesheets/: extra.css
tree_widget/: index.html
ui/: test_ui.py
utils/: index.html
window/: index.html
(+675 files in other folders)
